--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "frontend",
+  "homepage": "https://Siddh07.github.io/Ecommerce/",
+  "name": "Ecommerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
